--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,27 +4,6 @@
 
 	<!-- Navigation Bar -->
 	<%-include("./partials/nav")-%>
-
-	<!-- <div class="relative overflow-hidden bg-no-repeat bg-cover " style="
-	    background-position: 50%;
-	    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/146.webp');
-	    height: 350px;
-	  ">
-		<div class="relative top-0 bottom-0 left-0 right-0 w-full h-full overflow-hidden bg-fixed"
-			style="background-color: rgba(0, 0, 0, 0.75)">
-			<div class="flex items-center justify-center h-full">
-				<div class="px-6 text-center text-white md:px-12">
-					<h1 class="mt-0 mb-6 text-5xl font-bold">Gaming Freebies</h1>
-					<h3 class="mb-8 text-3xl font-bold">The Land of Free Games</h3>
-					<a role="button" href="/games"
-						class="inline-block px-6 py-2.5 border-2 border-white text-white font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
-						data-mdb-ripple="true" data-mdb-ripple-color="light">
-						See the list
-					</a>
-				</div>
-			</div>
-		</div>
-	</div> -->
 	<!-- Intro Section -->
 	<div class="container px-6 mx-auto my-24">
 
@@ -33,16 +12,16 @@
 
 			<div class="grid items-center gap-6 lg:grid-cols-2 xl:gap-12">
 				<div class="mb-6 lg:mb-0">
-					<h2 class="text-5xl font-bold tracking-tight text-purple-500 md:text-6xl xl:text-7xl">
-						Are you ready <br />
-						<span class="text-purple-600">for an adventure?</span>
+					<h2 class="text-5xl font-bold tracking-tight text-sky-600 md:text-6xl xl:text-7xl">
+						Find the top <br />
+						<span class="text-blue-700">free to play games!</span>
 					</h2>
 				</div>
 				<div class="mb-6 lg:mb-0">
-					<p class="mb-4 font-bold text-blue-600 uppercase">Learn more</p>
+					<p class="mb-4 font-bold uppercase text-sky-600">Learn more</p>
 					<p class="text-lg text-gray-500">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima officia consequatur
-						adipisci tenetur repudiandae rerum quos.
+						Keep a record of your gaming activities and look for new games to play;
+						plus free premium loot
 					</p>
 				</div>
 			</div>
