--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,13 @@
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
 
+	<!-- Google Fonts -->
+	<!-- Custom Title font -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet">
+
+	<!-- Font Awesome Icons -->
 	<script defer src="../js/brands.js"></script>
 	<script defer src="../js/solid.js"></script>
 	<script defer src="../js/fontawesome.js"></script>
